WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158781
[Win] Rendering is not scaled correctly if process is DPI aware.
https://bugs.webkit.org/show_bug.cgi?id=158781
Summary
[Win] Rendering is not scaled correctly if process is DPI aware.
Per Arne Vollan
Reported
2016-06-15 06:18:37 PDT
This only happens in accelerated compositing mode.
Attachments
Patch
(1.56 KB, patch)
2016-06-15 06:24 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-15 06:24:48 PDT
Created
attachment 281353
[details]
Patch
Brent Fulgham
Comment 2
2016-06-15 06:41:23 PDT
Comment on
attachment 281353
[details]
Patch This change looks reasonable, but I wish we had a test case that protected us from this happening again. Do we have any test cases to show this problem? How did you realize this was not working properly?
Per Arne Vollan
Comment 3
2016-06-15 07:09:31 PDT
(In reply to
comment #2
)
> Comment on
attachment 281353
[details]
> Patch > > This change looks reasonable, but I wish we had a test case that protected > us from this happening again. Do we have any test cases to show this > problem? How did you realize this was not working properly?
I don't think we currently have any test cases since DumpRenderTree is not DPI aware. I noticed the bug when browsing with MiniBrowser, which is DPI aware now. Maybe we should create some tests where DumpRenderTree is DPI aware? Thanks for reviewing :)
Per Arne Vollan
Comment 4
2016-06-17 04:21:15 PDT
Committed
r202163
: <
https://trac.webkit.org/changeset/202163
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug