[Win] Rendering is not scaled correctly if process is DPI aware. https://bugs.webkit.org/show_bug.cgi?id=158781

Reviewed by Brent Fulgham.

Scale the root graphics layer with the device scale factor.

* WebView.cpp:
(WebView::setAcceleratedCompositing):


Canonical link: https://commits.webkit.org/176941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202163 268f45cc-cd09-0410-ab3c-d52691b4dbfc